Fix - Alignwide and alignfull CSS

--- a/style.css
+++ b/style.css
@@ -1721,7 +1721,8 @@ a#scroll-up:hover {
 	max-width: unset;
 }
 
-.no-sidebar-full-width #primary .entry-content > .alignfull.wp-block-cover, .no-sidebar-full-width #primary .entry-content > .alignfull.wp-block-cover-image,
+.no-sidebar-full-width #primary .entry-content > .alignfull.wp-block-cover,
+.no-sidebar-full-width #primary .entry-content > .alignfull.wp-block-cover-image,
 .no-sidebar #primary .entry-content > .alignfull.wp-block-cover,
 .no-sidebar #primary .entry-content > .alignfull.wp-block-cover-image {
 	width: unset;
@@ -1735,23 +1736,26 @@ a#scroll-up:hover {
 	width: unset;
 }
 
-.no-sidebar-full-width.boxed #primary .entry-content > .alignfull {
-	margin-left: -100px;
-	margin-right: -100px;
-	width: unset;
+.no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
+.no-sidebar.boxed #primary .entry-content > .alignfull {
+	margin-left: -30px;
+	margin-right: -30px;
 }
 
-.no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover, .no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover-image,
+.no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover,
+.no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover-image,
 .no-sidebar.boxed #primary .entry-content > .alignfull.wp-block-cover,
 .no-sidebar.boxed #primary .entry-content > .alignfull.wp-block-cover-image {
 	width: unset;
 }
 
-.no-sidebar-full-width.boxed #primary .entry-content > .alignwide {
-	margin-left: -15px;
-	margin-right: -15px;
+.no-sidebar-full-width.boxed #primary .entry-content > .alignwide,
+.no-sidebar.boxed #primary .entry-content > .alignwide {
+	margin-left: -30px;
+	margin-right: -30px;
 	max-width: unset;
 }
+
 
 /*--------------------------------------------------------------
 Gutenberg Blocks Layout.
@@ -2186,12 +2190,12 @@ iframe#wp-custom-header-video {
 ----------------------------------------------- */
 @media screen and (max-width: 1500px) {
 	.no-sidebar-full-width #primary .entry-content > .alignwide {
-		margin-left: -100px;
+		margin-left: -50px;
 		margin-right: -100px;
 	}
 	.no-sidebar #primary .entry-content > .alignwide {
-		margin-left: -50px;
-		margin-right: -50px;
+		margin-left: -100px;
+		margin-right: -100px;
 	}
 	.no-sidebar #primary .entry-content > .alignfull {
 		margin-left: -100px;
